# Production-ML-Pipeline-with-Drift-Monitoring-Auto-Retraining-Scalable-Deployment

./: .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt
data/artifacts/: Churn_Model.pkl  metrics.json  preprocessor.pkl
data/processed/: telcodata_02_processed.csv
docker/: Dockerfile.api
docs/: architechture.html
notebook/: 01_eda.ipynb  02_feature_analysis.ipynb  03_model_experiments.ipynb  04_Hyperparameter Tuning & Threshold Optimization.ipynb
src/: data_ingestion.py  evaluate.py  predict.py  preprocessing.py  train.py
src/api/: app.py  schema.py
src/config/: config.yaml  paths.py
src/monitoring/: drift_detection.py  retraining_trigger.py
src/pipeline/: inference_pipeline.py  training_pipeline.py
src/utils/: common.py  exception.py  logger.py
